Java is fun :blush: :three: :two: